Fix display of tables with unwrapable content (#436)
Using display:block for tables makes them ugly when the content is not
long such as with the environments table on the integrator guide.
Restore default display:table for table elements and instead surround
tables with an overflow-x-auto div.

The sandbox account table content is explicitly wrapped with <wbr> tags.

--- a/imsv-docs-astro/src/styles/tailwind.css
+++ b/imsv-docs-astro/src/styles/tailwind.css
@@ -49,8 +49,3 @@ h1, h2, h3, h4 {
   position: relative;
   z-index: -1;
 }
-
-table {
-  display: block;
-  overflow-x: auto;
-}
